--- a/src/pages/care-plan/su-goals/su-goals.html
+++ b/src/pages/care-plan/su-goals/su-goals.html
@@ -815,22 +815,22 @@
       _computeGoalImage:function(cat){
         switch(cat) {
           case "Accommodation":
-              return "images/accommodation.png"
+              return "images/goals/accommodation.png"
               break;
           case "Finance And Budget":
-              return "images/financeAndBudget.png"
+              return "images/goals/financeAndBudget.png"
               break;
           case "Social Skills":
-              return "images/socialSkills.png"
+              return "images/goals/socialSkills.png"
               break;
           case "Medical Treatment":
-              return "images/medicalTreatment.png"
+              return "images/goals/medicalTreatment.png"
               break;
           case "Mental Health":
-              return "images/mentalHealth.png"
+              return "images/goals/mentalHealth.png"
               break;
           default:
-              return "images/other.png"
+              return "images/goals/other.png"
         };
       },
       toggleEditModal:function(e){
