--- a/src/pages/care-plan/su-medication/su-medication.html
+++ b/src/pages/care-plan/su-medication/su-medication.html
@@ -66,16 +66,16 @@
         right:var(--main-fab-right);
       }
       .timeChunkMorning{
-          background-image:url(../../../../images/morning.png);
+          background-image:url(../../../../images/timechunks/morning.png);
       }
       .timeChunkAfternoon{
-          background-image:url(../../../../images/afternoon.png);
+          background-image:url(../../../../images/timechunks/afternoon.png);
       }
       .timeChunkEvening{
-          background-image:url(../../../../images/evening.png);
+          background-image:url(../../../../images/timechunks/evening.png);
       }
       .timeChunkNight{
-          background-image:url(../../../../images/night.png);
+          background-image:url(../../../../images/timechunks/night.png);
       }
       .timeChunkBar{
         background-color:#E0E0E0;
