--- a/src/pages/care-plan/su-pre/su-pre.html
+++ b/src/pages/care-plan/su-pre/su-pre.html
@@ -68,8 +68,8 @@
       <h2>Add a New Section</h2>
       <paper-input label="Name the New Section" value="{{customData.label}}"></paper-input>
       <paper-input label="Describe the New Section" value="{{customData.label2}}"></paper-input>
-      <paper-button dialog-dismiss>cancel</paper-button>
-      <paper-button dialog-dismiss>save</paper-button>
+      <paper-button on-tap="cancelNewSection">cancel</paper-button>
+      <paper-button on-tap="saveNewSection">save</paper-button>
     </paper-dialog>
 
     <paper-card elevation="3">
@@ -212,11 +212,19 @@
       createNewSection:function(){
         this.$.customInput.path=null;
         this.$.customInput.data={};
+        this.$.customSectionModal.open();
+      },
+      saveNewSection:function(){
         var path="/homes/"+this.home+"/patients/"+this.patient+"/preAdmissionAssessment/custom"
         this.$.customInput.save(path, null)
           .then(function(){
-            this.$.customSectionModal.toggle();
+            this.$.customSectionModal.close();
           }.bind(this));
+      },
+      cancelNewSection:function(){
+        this.$.customInput.path=null;
+        this.$.customInput.data={};
+        this.$.customSectionModal.close();
       },
       print:function(e){
         var printable=window.open("","printable");
