--- a/src/elements/admin-drawer/dependencies.html
+++ b/src/elements/admin-drawer/dependencies.html
@@ -7,3 +7,6 @@
 <link rel="import" href="../../../bower_components/paper-item/paper-icon-item.html" />
 <link rel="import" href="../../../bower_components/iron-icon/iron-icon.html" />
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html" />
+<link rel="import" href="../../../bower_components/iron-icons/communication-icons.html" />
+<link rel="import" href="../../../bower_components/paper-toggle-button/paper-toggle-button.html" />
+<link rel="import" href="../../../bower_components/iron-image/iron-image.html" />
