--- a/src/my-app.html
+++ b/src/my-app.html
@@ -281,6 +281,9 @@
         background-color:#5A67BB;
         color:#FFF;
       }
+      #suDrawer{
+        background-color:#F5F2F2;
+      }
     </style>
 
     <div class="loadingOverlay">
