--- a/src/pages/care-plan/su-care/su-care.html
+++ b/src/pages/care-plan/su-care/su-care.html
@@ -327,33 +327,27 @@
     </guuey-text-input>
 
   <guuey-table
-    tableroute="homes/[[home]]/patients/[[patient]]/carePlan/wellBeingQuestionnaire"
-    tableinputs="[[wellBeingQuestionnaireInputs]]"
-    category="Body Part"
+    path="homes/[[home]]/patients/[[patient]]/carePlan/wellBeingQuestionnaire"
+    input-values="[[wellBeingQuestionnaireInputs]]"
+    table-category="Body Part"
     label="Well being Questionnaire"
-    label2="Personal Health & Hygiene care"
-    patient="[[patient]]"
-    home="[[home]]">
+    label2="Personal Health & Hygiene care">
   </guuey-table>
 
   <guuey-table
-    tableroute="homes/[[home]]/patients/[[patient]]/carePlan/myHealthQuestionnaire"
-    tableinputs="[[myHealthQuestionnaireInputs]]"
-    category="Areas of concern"
+    path="homes/[[home]]/patients/[[patient]]/carePlan/myHealthQuestionnaire"
+    input-values="[[myHealthQuestionnaireInputs]]"
+    table-category="Areas of concern"
     label="My Health"
-    label2="Personal Health & Hygiene care"
-    patient="[[patient]]"
-    home="[[home]]">
+    label2="Personal Health & Hygiene care">
   </guuey-table>
 
   <guuey-table
-    tableroute="homes/[[home]]/patients/[[patient]]/carePlan/myRoomQuestionnaire"
-    tableinputs="[[myRoomQuestionnaireInputs]]"
-    category="Activity"
+    path="homes/[[home]]/patients/[[patient]]/carePlan/myRoomQuestionnaire"
+    input-values="[[myRoomQuestionnaireInputs]]"
+    table-category="Activity"
     label="My room"
-    label2="Personal Health & Hygiene care"
-    patient="[[patient]]"
-    home="[[home]]">
+    label2="Personal Health & Hygiene care">
   </guuey-table>
 
   <guuey-list-input
