--- a/src/pages/care-plan/su-medication/su-medication.html
+++ b/src/pages/care-plan/su-medication/su-medication.html
@@ -78,7 +78,7 @@
           background-image:url(../../../../images/timechunks/night.png);
       }
       .timeChunkBar{
-        background-color:#E0E0E0;
+        background-color:#F5F2F2;
         margin:20px 0 20px 0;
         padding:30px;
         color:#009688;
@@ -97,8 +97,7 @@
         cursor:pointer;
       }
       .timeChunkTime{
-        color:#000;
-        opacity:.5;
+        color:#686868;
         font-weight:bold;
         font-size:20px;
         text-transform:uppercase;
