--- a/src/elements/admin-drawer/dependencies.html
+++ b/src/elements/admin-drawer/dependencies.html
@@ -10,3 +10,4 @@
 <link rel="import" href="../../../bower_components/iron-icons/communication-icons.html" />
 <link rel="import" href="../../../bower_components/paper-toggle-button/paper-toggle-button.html" />
 <link rel="import" href="../../../bower_components/iron-image/iron-image.html" />
+<link rel="import" href="../../../bower_components/iron-selector/iron-selector.html" />
