--- a/src/elements/guuey-table/dependencies.html
+++ b/src/elements/guuey-table/dependencies.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../bower_components/polymerfire/firebase-document.html" />
-<link rel="import" href="../../../bower_components/paper-card/paper-card.html" />
+<link rel="import" href="../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html" />
-<link rel="import" href="../guuey-table-row/guuey-table-row.html" />
+<link rel="import" href="dropdown-input.html" />
+<link rel="import" href="comment-input.html" />
