updated pages where minify was throwing error to use non es6 js code. included 404 page in my-app.html in order to ensure that the page code is loaded in case of first case 404 situations.

--- a/src/elements/guuey-table/comment-input.html
+++ b/src/elements/guuey-table/comment-input.html
@@ -16,7 +16,6 @@
   </template>
 
   <script>
-
     Polymer({
       is:"comment-input",
       properties:{
@@ -38,7 +37,7 @@
       field:{
         type:String
       },
-      _dataChanged(rowInputs, input, field){
+      _dataChanged:function(rowInputs, input, field){
         if(rowInputs[input+field]){
           var value=rowInputs[input+field];
           if(this.value !==value){
@@ -55,7 +54,6 @@
         }
       }
     });
-
   </script>
 
 </dom-module>
