--- a/src/pages/care-plan/su-profile/su-profile.html
+++ b/src/pages/care-plan/su-profile/su-profile.html
@@ -937,7 +937,7 @@
         }
         return newText;
       },
-      editquery900(query900){
+      editquery900:function(query900){
         if(query900){
           this.customStyle["--app-grid-columns"]="1";
           this.updateStyles();
@@ -977,7 +977,7 @@
           };
         };
       },
-      secondaryRequirementsMet(data){
+      secondaryRequirementsMet:function(data){
         if(Object.keys(data).length === 0 && data.constructor === Object){
 
         } else {
